--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -50,8 +50,8 @@
                 {% endif %}
 
             </ul>
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <form class="d-flex" action="/search/pokemon" method = "POST">
+                <input class="form-control me-2" type="input" name= 'poke' value="{{ request.form['poke'] }}" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
         </div>
